# gtk-default

./: CMakeLists.txt  README.md  deps.sh  main.c
